      state, DDD will automatically make it ungrab the pointer.
    - In the source argument field `()', pressing RETURN activates
      the `Lookup ()' button.
    - You can now clear all argument fields `()' by clicking on the
      prompt `():'.
    - Unnecessary redisplays have been significantly reduced, causing
      much less flickering.
    - You can search for keywords in the online DDD manual.

    Documentation:
    - The PostScript copy of the manual has been enriched with more
      than 30 color screen shots showing DDD usage.

    Changes in configuration and building:
    - DDD 2.1 uses improved configuration checks from Autoconf 2.12.
    - DDD no longer installs in the `gcc' location by default, but in
      an existing DDD location; otherwise, in `/usr/local/bin'.
    - Improved means of determining builder's e-mail address.
    - Beta releases and DDD snapshots expire after a few weeks.

    Bug fixes:
    - Using DBX, comments were stripped from source code under certain
      circumstances.  Fixed.
    - The sash to resize the assembler window is back again.
    - With XDB, sources are found in alternate directories, too.
    - With DBX, the current source line was omitted from the listing
      under certain circumstances.  Fixed.
    - `Help on Version' no longer includes the entire DDD configuration.
    - Several single-letter options like `-d DIR' are now properly 
      passed down to the inferior debugger.
    - `Select All' followed by `Delete' no more causes DDD to crash.
    - Problems with button specs ending in `...' have been fixed.
    - Line continuations (i.e. lines ending in `\') are properly handled.
    - Problems in building the `vsl' and `test-graph' programs are fixed.
    - On Linux, drag-and-drop of pixmaps has been disabled explicitly
      (several Linux Motif libraries are broken in this aspect).
    - And again, dozens of minor bug fixes and improvements.

    Release policy: